test/files/neg/plugin-rightafter-terminal/lib/plugins.jar.desired.sha1
b2166b6bc2a55264d959e613fa52695295db2281 ?plugins.jar
